# lamp-server-rust

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs  res.rs
src/constants/: mod.rs
src/control/: fn_queue.rs  mod.rs  state.rs  state_gen.rs  timeday.rs  timer.rs  web.rs
src/res/: constants.rs
src/util/: api_request.rs  fn_queue.rs  govee.rs  govee_api.rs  govee_secrets.rs  mod.rs  timeday.rs
src/view/: out.rs
